--- a/xFunc.App/xFunc.App.csproj
+++ b/xFunc.App/xFunc.App.csproj
@@ -170,6 +170,9 @@
   <ItemGroup>
     <None Include="Operations.design" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Help.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
