--- a/xFunc.Library/xFunc.Library.csproj
+++ b/xFunc.Library/xFunc.Library.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExpressionType.cs" />
     <Compile Include="LogicExpressionItem.cs" />
     <Compile Include="Exceptions\LexerException.cs" />
     <Compile Include="Exceptions\ParserException.cs" />
