--- a/xFunc.Test/xFunc.Test.csproj
+++ b/xFunc.Test/xFunc.Test.csproj
@@ -52,6 +52,14 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Expressions\Logics\AndLogicExpressionTest.cs" />
+    <Compile Include="Expressions\Logics\EqualityLogicExpressionTest.cs" />
+    <Compile Include="Expressions\Logics\ImplicationLogicExpressionTest.cs" />
+    <Compile Include="Expressions\Logics\NAndLogicExpressionTest.cs" />
+    <Compile Include="Expressions\Logics\NOrLogicExpressionTest.cs" />
+    <Compile Include="Expressions\Logics\NotLogicExpressionTest.cs" />
+    <Compile Include="Expressions\Logics\OrLogicExpressionTest.cs" />
+    <Compile Include="Expressions\Logics\XOrLogicExpressionTest.cs" />
     <Compile Include="Expressions\Maths\AbsoluteMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\AdditionMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\ArccosMathExpressionTest.cs" />
@@ -86,11 +94,4 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
