--- a/xFunc.Library.Maths/xFunc.Library.Maths.csproj
+++ b/xFunc.Library.Maths/xFunc.Library.Maths.csproj
@@ -78,6 +78,7 @@
     <Compile Include="MathParser.cs" />
     <Compile Include="MathToken.cs" />
     <Compile Include="MathTokenType.cs" />
+    <Compile Include="MathWorkspaceItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.Designer.cs">
       <DependentUpon>Resource.resx</DependentUpon>
@@ -89,6 +90,7 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Compile Include="MathWorkspace.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Resource.resx">
