--- a/xFunc.Library.Logics/xFunc.Library.Logics.csproj
+++ b/xFunc.Library.Logics/xFunc.Library.Logics.csproj
@@ -60,6 +60,8 @@
     <Compile Include="LogicParser.cs" />
     <Compile Include="LogicToken.cs" />
     <Compile Include="LogicTokenType.cs" />
+    <Compile Include="LogicWorkspace.cs" />
+    <Compile Include="LogicWorkspaceItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.Designer.cs">
       <DependentUpon>Resource.resx</DependentUpon>
