--- a/xFunc.Test/xFunc.Test.csproj
+++ b/xFunc.Test/xFunc.Test.csproj
@@ -85,6 +85,8 @@
     <Compile Include="Expressions\Maths\SqrtMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\SubtractionMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\AssignMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\SecantMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\CosecantMathExpressionTest.cs" />
     <Compile Include="LexerTest.cs" />
     <Compile Include="LogicParameterCollectionTest.cs" />
     <Compile Include="MathParserTest.cs" />
