--- a/xFunc.Test/xFunc.Test.csproj
+++ b/xFunc.Test/xFunc.Test.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Expressions\Maths\SecantMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\CosecantMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\ArcsecMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\ArccscMathExpressionTest.cs" />
     <Compile Include="LexerTest.cs" />
     <Compile Include="LogicParameterCollectionTest.cs" />
     <Compile Include="MathParserTest.cs" />
