Added NOTICE and LICENSE_Ms-PL.txt to output dir.

--- a/xFunc.App/xFunc.App.csproj
+++ b/xFunc.App/xFunc.App.csproj
@@ -146,9 +146,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="LICENSE">
+    <None Include="LICENSE">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\Copy.png" />
@@ -184,10 +184,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="NOTICE" />
+    <None Include="NOTICE">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="LICENSE_Ms-PL.txt" />
+    <None Include="LICENSE_Ms-PL.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
