--- a/xFunc/xFunc.csproj
+++ b/xFunc/xFunc.csproj
@@ -101,6 +101,9 @@
     <Compile Include="Converters\ILogicExpressionToStringConverter.cs" />
     <Compile Include="Converters\IMathExpressionToStringConverter.cs" />
     <Compile Include="Presenters\MainPresenter.cs" />
+    <Compile Include="Views\AboutView.xaml.cs">
+      <DependentUpon>AboutView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\DrawingCanvas.cs" />
     <Compile Include="Views\IMainView.cs" />
     <Compile Include="Views\MainView.xaml.cs">
@@ -120,6 +123,10 @@
     <Page Include="Operations.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\AboutView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\MainView.xaml">
       <SubType>Designer</SubType>
