--- a/xFunc/xFunc.csproj
+++ b/xFunc/xFunc.csproj
@@ -103,7 +103,9 @@
     <Compile Include="Presenters\MainPresenter.cs" />
     <Compile Include="Presenters\MathTabPresenter.cs" />
     <Compile Include="Presenters\TruthTableTabPresenter.cs" />
-    <Compile Include="ViewModel\TruthTableRowViewModel.cs" />
+    <Compile Include="ViewModels\LogicWorkspaceItemViewModel.cs" />
+    <Compile Include="ViewModels\MathWorkspaceItemViewModel.cs" />
+    <Compile Include="ViewModels\TruthTableRowViewModel.cs" />
     <Compile Include="Views\AboutView.xaml.cs">
       <DependentUpon>AboutView.xaml</DependentUpon>
     </Compile>
