#4 Added sinh, cosh.

--- a/xFunc.Maths/xFunc.Maths.csproj
+++ b/xFunc.Maths/xFunc.Maths.csproj
@@ -59,6 +59,8 @@
     <Compile Include="Expressions\DivisionMathExpression.cs" />
     <Compile Include="Expressions\ExpMathExpression.cs" />
     <Compile Include="Expressions\ExponentiationMathExpression.cs" />
+    <Compile Include="Expressions\HyperbolicCosineMathExpression.cs" />
+    <Compile Include="Expressions\HyperbolicSineMathExpression.cs" />
     <Compile Include="Expressions\IMathExpression.cs" />
     <Compile Include="Expressions\LgMathExpression.cs" />
     <Compile Include="Expressions\LnMathExpression.cs" />
