--- a/xFunc.Test/xFunc.Test.csproj
+++ b/xFunc.Test/xFunc.Test.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Expressions\Maths\ArcsinMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\ArctanMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\ArccotMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\HyperbolicCosineMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\CotangentMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\TangentMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\SineMathExpressionTest.cs" />
@@ -89,6 +90,7 @@
     <Compile Include="Expressions\Maths\CosecantMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\ArcsecMathExpressionTest.cs" />
     <Compile Include="Expressions\Maths\ArccscMathExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\HyperbolicSineMathExpressionTest.cs" />
     <Compile Include="LexerTest.cs" />
     <Compile Include="LogicParameterCollectionTest.cs" />
     <Compile Include="MathParserTest.cs" />
