--- a/xFunc.Maths/xFunc.Maths.csproj
+++ b/xFunc.Maths/xFunc.Maths.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Expressions\ExponentiationMathExpression.cs" />
     <Compile Include="Expressions\HyperbolicCosineMathExpression.cs" />
     <Compile Include="Expressions\HyperbolicSineMathExpression.cs" />
+    <Compile Include="Expressions\HyperbolicTangentMathExpression.cs" />
     <Compile Include="Expressions\IMathExpression.cs" />
     <Compile Include="Expressions\LgMathExpression.cs" />
     <Compile Include="Expressions\LnMathExpression.cs" />
