--- a/xFunc.Maths/xFunc.Maths.csproj
+++ b/xFunc.Maths/xFunc.Maths.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Expressions\ArctanMathExpression.cs" />
     <Compile Include="Expressions\AssignMathExpression.cs" />
     <Compile Include="Expressions\BinaryMathExpression.cs" />
+    <Compile Include="Expressions\HyperbolicArcosecantMathExpression.cs" />
+    <Compile Include="Expressions\HyperbolicArsecantMathExpression.cs" />
     <Compile Include="Expressions\HyperbolicArcotangentMathExpression.cs" />
     <Compile Include="Expressions\HyperbolicArtangentMathExpression.cs" />
     <Compile Include="Expressions\HyperbolicArcosineMathExpression.cs" />
